--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.10.5"
+priority-queue = "1.3.0"
 reqwest = { version = "0.11.13", features = ["blocking"] }
