--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 itertools = "0.10.5"
 priority-queue = "1.3.0"
 reqwest = { version = "0.11.13", features = ["blocking"] }
+serde = "1.0.150"
+serde_json = "1.0.89"
