--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.10.5"
+nom = "7.1.1"
 priority-queue = "1.3.0"
 reqwest = { version = "0.11.13", features = ["blocking"] }
 serde = "1.0.150"
